# web-starter

./: .env.example  .pre-commit-config.yaml  docker-compose.yml
apps/api/: .env.example  .gitignore  alembic.ini  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260207_2122_7f056ad65a92_create_users_table.py  20260207_2307_bbad14c78164_add_sessions_table.py
apps/api/scripts/: migrate.sh
apps/api/src/: main.py
apps/api/src/api/: deps.py
apps/api/src/api/v1/: router.py
apps/api/src/api/v1/endpoints/: health.py
apps/api/src/core/: __init__.py  events.py  logging.py  settings.py
apps/api/src/core/database/: __init__.py  engine.py  session.py
apps/api/src/core/exceptions/: __init__.py  auth.py  base.py  codes.py  database.py  handlers.py  http.py
apps/api/src/core/security/: __init__.py  password.py
apps/api/src/db/: __init__.py
apps/api/src/db/repositories/: __init__.py  base.py  session.py  user.py
apps/api/src/middleware/: __init__.py  logging.py  timing.py
apps/api/src/models/: __init__.py  base.py  mixins.py  session.py  user.py
apps/api/src/schemas/: __init__.py  base.py  user.py
apps/api/src/schemas/validators/: __init__.py  common.py
apps/api/src/services/: __init__.py  base.py  session.py  user.py
